[package]
name = "grafana_webhook_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url-escape = "0.1.1"
config = { version = "0.13.3", features = ["yaml"] }
hyper-tls = "0.5.0"

[[bin]]
name = "grafana_webhook_server"
path = "main.rs"
